ALt-text-changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main id="main-content">
         <h2>Featured Image</h2>
         <div class="flex-container">
-            <img src="assets/images/birdsandanimals/Sparrow.webp" alt="Featured Image">
+            <img src="assets/images/birdsandanimals/Sparrow.webp" alt="Sparrow">
             <img src="assets/images/bikes/Speed400.webp" alt="Speed 400">
             <img src="assets/images/cars/BMW_i8.webp" alt="BMW i8">
         </div>
